fix provisioning of prod.secret.exs for app other than the example/default

--- a/templates/prod.secret.exs.j2
+++ b/templates/prod.secret.exs.j2
@@ -8,11 +8,11 @@ use Mix.Config
 # file or create a script for recreating it, since it's
 # kept out of version control and might be hard to recover
 # or recreate for your teammates (or you later on).
-config :phoenix_example, PhoenixExample.Endpoint,
+config :{{ phoenix_app_name}}, {{ phoenix_app_name_camel_case }}.Endpoint,
   secret_key_base: "{{ phoenix_secret_key_base }}"
 
 # Configure your database
-config :phoenix_example, PhoenixExample.Repo,
+config :{{ phoenix_app_name }}, {{ phoenix_app_name_camel_case }}.Repo,
   adapter: Ecto.Adapters.Postgres,
   username: "{{ phoenix_database_user }}",
   password: "{{ phoenix_database_password }}",
